Refactor project pages: Remove 'projekt-can.html' and 'projekt-embedded.html'; add 'projekt-makenow.html' and 'projekt-raid.html'. Update 'projekt-iot.html' with new favicon. Enhance translations in 'script.js' and improve auto-translation functionality. Modify bullet points in CSS for project sections.

--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Lebenslauf von Marcel Richter. Student der Angewandten Informatik mit Schwerpunkt Embedded Systems.">
 
   <!-- Favicon -->
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💻</text></svg>">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23312e81'/><text x='50' y='65' font-size='48' font-weight='bold' fill='%23818cf8' text-anchor='middle' font-family='Arial, sans-serif'>MR</text></svg>">
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
@@ -23,117 +23,97 @@
 
       <!-- Ausbildung -->
       <section class="cv-section">
-        <h2 data-i18n="cvEducationTitle">Ausbildung</h2>
+        <h2 data-i18n="cvEducationTitle">Schulischer Werdegang</h2>
         <div class="cv-item">
           <div class="cv-item-header">
-            <h3 data-i18n="cvEducationDegree">Bachelor of Science, Angewandte Informatik</h3>
-            <span class="cv-date" data-i18n="cvEducationDate">10/2022 - Heute</span>
+            <h3>Bachelor of Science - Angewandte Informatik</h3>
+            <span class="cv-date">02/2026</span>
           </div>
-          <p class="cv-institution" data-i18n="cvEducationSchool">HTWG Konstanz</p>
-          <p class="cv-focus" data-i18n="cvEducationFocus">Schwerpunkt: Embedded Systems</p>
-          <p data-i18n="cvEducationDescription">
-            Studium der Angewandten Informatik mit Fokus auf Embedded Systems. Relevante Module: Mikroprozessortechnik, Digitale Systeme, Embedded Linux, Softwareentwicklung in C/C++, Echtzeitsysteme und Kommunikationsprotokolle.
-          </p>
-          <ul class="cv-highlights">
-            <li data-i18n="cvEducationHighlight1">Hardwarenahe Programmierung in C und C++</li>
-            <li data-i18n="cvEducationHighlight2">Mikrocontroller-Entwicklung und Peripherie-Anbindung</li>
-            <li data-i18n="cvEducationHighlight3">Entwicklung von Embedded-Anwendungen mit Fokus auf Zuverlässigkeit</li>
-          </ul>
+          <p class="cv-institution">HTWG Konstanz</p>
+        </div>
+        <div class="cv-item">
+          <div class="cv-item-header">
+            <h3>Fachhochschulreife</h3>
+            <span class="cv-date">2019</span>
+          </div>
+          <p class="cv-institution">Karl-Maybach-Gymnasium, Friedrichshafen</p>
         </div>
       </section>
 
       <!-- Praxiserfahrung -->
       <section class="cv-section">
-        <h2 data-i18n="cvExperienceTitle">Praxiserfahrung</h2>
+        <h2 data-i18n="cvExperienceTitle">Professionelle Erfahrung</h2>
 
         <div class="cv-item">
           <div class="cv-item-header">
-            <h3 data-i18n="cvExperience1Title">Werkstudent Embedded Software</h3>
-            <span class="cv-date" data-i18n="cvExperience1Date">04/2024 - Heute</span>
+            <h3>Werkstudent</h3>
+            <span class="cv-date">03/2023 - 02/2024</span>
           </div>
-          <p class="cv-institution" data-i18n="cvExperience1Company">Technologie-Unternehmen, Konstanz</p>
+          <p class="cv-institution">Hyperstone GmbH, Konstanz</p>
           <ul class="cv-highlights">
-            <li data-i18n="cvExperience1Task1">Entwicklung von Firmware-Komponenten für Mikrocontroller-basierte Systeme</li>
-            <li data-i18n="cvExperience1Task2">Implementierung von Kommunikationsprotokollen (CAN, UART, SPI)</li>
-            <li data-i18n="cvExperience1Task3">Debugging und Testing mit Hardware-Debuggern und Logikanalysatoren</li>
-            <li data-i18n="cvExperience1Task4">Code-Reviews und Dokumentation nach Entwicklungsstandards</li>
+            <li>RAID-Simulation und Konzeptüberarbeitung</li>
+            <li>Simulation der Firmware</li>
+            <li>Implementierung verschiedener RAID-Konfigurationen zum Leistungstest</li>
           </ul>
         </div>
 
         <div class="cv-item">
           <div class="cv-item-header">
-            <h3 data-i18n="cvExperience2Title">Praxissemester Embedded Entwicklung</h3>
-            <span class="cv-date" data-i18n="cvExperience2Date">09/2024 - 02/2025</span>
+            <h3>Praktikum</h3>
+            <span class="cv-date">09/2022 - 02/2023</span>
           </div>
-          <p class="cv-institution" data-i18n="cvExperience2Company">Industrieunternehmen, Süddeutschland</p>
-          <ul class="cv-highlights">
-            <li data-i18n="cvExperience2Task1">Entwicklung einer Steuerungssoftware für ein Embedded-System</li>
-            <li data-i18n="cvExperience2Task2">Anbindung von Sensoren und Aktuatoren über verschiedene Schnittstellen</li>
-            <li data-i18n="cvExperience2Task3">Implementierung von Fehlerbehandlung und Diagnosefunktionen</li>
-            <li data-i18n="cvExperience2Task4">Erstellung technischer Dokumentation und Testprotokolle</li>
-          </ul>
+          <p class="cv-institution">Hyperstone GmbH, Konstanz</p>
         </div>
       </section>
 
       <!-- Skills -->
       <section class="cv-section">
-        <h2 data-i18n="cvSkillsTitle">Technische Skills</h2>
+        <h2>Kenntnisse</h2>
 
         <div class="cv-skills-category">
-          <h4 data-i18n="cvSkillsProgramming">Programmiersprachen</h4>
+          <h4>Programmiersprachen</h4>
           <div class="badges">
-            <span class="badge">C</span>
-            <span class="badge">C++</span>
             <span class="badge">Python</span>
-            <span class="badge">VHDL (Grundlagen)</span>
-            <span class="badge">JavaScript</span>
+            <span class="badge">C++</span>
+            <span class="badge">C</span>
+            <span class="badge">Java</span>
+            <span class="badge">Scala</span>
           </div>
         </div>
 
         <div class="cv-skills-category">
-          <h4 data-i18n="cvSkillsEmbedded">Embedded Systems</h4>
+          <h4>Softwareentwicklung</h4>
           <div class="badges">
-            <span class="badge">Mikrocontroller (STM32, AVR)</span>
-            <span class="badge">Embedded Linux</span>
-            <span class="badge">RTOS Grundlagen</span>
-            <span class="badge">Hardware-Debugging (JTAG/SWD)</span>
-            <span class="badge">Interrupts & Timer</span>
+            <span class="badge">Git Versionierung</span>
+            <span class="badge">Agiles Arbeiten</span>
           </div>
         </div>
 
         <div class="cv-skills-category">
-          <h4 data-i18n="cvSkillsProtocols">Kommunikationsprotokolle</h4>
+          <h4>Embedded Systems</h4>
           <div class="badges">
-            <span class="badge">CAN Bus</span>
-            <span class="badge">UART/USART</span>
-            <span class="badge">SPI</span>
-            <span class="badge">I2C</span>
-            <span class="badge">TCP/IP Grundlagen</span>
-          </div>
-        </div>
-
-        <div class="cv-skills-category">
-          <h4 data-i18n="cvSkillsTools">Tools & Entwicklungsumgebung</h4>
-          <div class="badges">
-            <span class="badge">Git</span>
-            <span class="badge">VS Code</span>
-            <span class="badge">GCC Toolchain</span>
-            <span class="badge">CMake</span>
+            <span class="badge">Kommunikationstechnik</span>
+            <span class="badge">Ubiquitous Computing</span>
+            <span class="badge">Digitale Systeme</span>
           </div>
         </div>
       </section>
 
       <!-- Sprachen -->
       <section class="cv-section">
-        <h2 data-i18n="cvLanguagesTitle">Sprachen</h2>
+        <h2>Sprachkenntnisse</h2>
         <div class="cv-languages">
           <div class="cv-language">
-            <span data-i18n="cvLanguageGerman">Deutsch</span>
-            <span data-i18n="cvLanguageGermanLevel">Muttersprache</span>
+            <span>Deutsch</span>
           </div>
           <div class="cv-language">
-            <span data-i18n="cvLanguageEnglish">Englisch</span>
-            <span data-i18n="cvLanguageEnglishLevel">Fließend (C1)</span>
+            <span>Englisch</span>
+          </div>
+          <div class="cv-language">
+            <span>Französisch</span>
+          </div>
+          <div class="cv-language">
+            <span>Spanisch</span>
           </div>
         </div>
       </section>
