--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kontakt | Marcel Richter</title>
   <meta name="description" content="Kontaktiere Marcel Richter. Schreib mir eine Nachricht oder nutze das Kontaktformular.">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💻</text></svg>">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23312e81'/><text x='50' y='65' font-size='48' font-weight='bold' fill='%23818cf8' text-anchor='middle' font-family='Arial, sans-serif'>MR</text></svg>">
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
@@ -108,7 +108,7 @@
           style="display: none;"
           aria-live="polite"
         >
-          ✅ Nachricht wurde gesendet. Weiterleitung läuft...
+          Nachricht wurde gesendet. Weiterleitung läuft...
         </div>
       </form>
 
