--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <article class="project-card">
           <h3>
             <a href="projekt-makenow.html" target="_blank" rel="noopener" data-i18n="projectMakeNowTitle">
-              DayFlow. AI Day Planner (make_now)
+              DayFlow. AI Day Planner
             </a>
           </h3>
           <p class="project-summary" data-i18n="projectMakeNowSummary">
